# NativeCord

./: .gitmodules  CMakeLists.txt  Makefile  NativeCord.cpp  NativeCord.h  README.md
chat/: ActionEvent.h  ChatColor.h  ChatMessage.cpp  ChatMessage.h  HoverEvent.h
config/: Configuration.cpp  Configuration.h
connection/: Connection.h  ConnectionState.h  PlayerConnection.cpp  PlayerConnection.h  PlayerConnectionProperties.h  ServerConnection.cpp  ServerConnection.h  Socket.cpp  Socket.h
connection/player/: GameProfile.h  PlayerConnection.cpp  PlayerConnection.h
encription/: Cipper.cpp  Cipper.h  RSAUtil.h
include/: NativeCord.h
include/chat/: ChatColor.h  ChatMessage.h
include/config/: Configuration.h
include/connection/: Connection.h  ConnectionState.h  GameProfile.h  PlayerConnection.h  ServerConnection.h  Socket.h
include/cryption/: Cipper.h
include/json/: json.hpp
include/log/: LogUtils.h  Terminal.h
include/plugin/: Plugin.h  PluginManager.h
include/plugin/cxx/: CXXPlugin.h
include/plugin/event/: Event.h  EventHelper.h  EventType.h  PlayerConnectEvent.h
include/plugin/java/: JavaPlugin.h  JavaPluginManagerImpl.h  JavaReflectManager.h
include/plugin/java/jni/: DataStorage.h  DataStorageImpl.h
include/protocoll/: ClientPacketHandler.h  DataBuffer.h  PacketHandler.h  Packets.h  ServerPacketHandler.h  StreamedDataBuffer.h
include/server/: ScoreboardManager.h  ServerInfo.h  TabManager.h
include/utils/: EntityRewrite.h  HTTPUtil.h  HexUtils.h  SocketUtil.h  StringUtil.h  UUIDUtils.h  VectorUtils.h
numbers/: bigInt.cpp  bigInt.h
protocoll/Buffers/: DataBuffer.cpp  DataBuffer.h  StreamedDataBuffer.cpp  StreamedDataBuffer.h
protocoll/packet/: ClientPacketHandler.cpp  ClientPacketHandler.h  PacketHandler.h  Packets.h  ServerPacketHandler.cpp  ServerPacketHandler.h
server/: ScoreboardManager.cpp  ScoreboardManager.h  ServerInfo.cpp  ServerInfo.h  TabManager.cpp  TabManager.h
src/chat/: ChatMessage.cpp
src/config/: Configuration.cpp
src/connection/: PlayerConnection.cpp  ServerConnection.cpp  Socket.cpp
src/encription/: Cipper.cpp
src/log/: LogUtils.cpp  Terminal.cpp
src/numbers/: BigInteger.cc  BigIntegerAlgorithms.cc  BigIntegerUtils.cc  BigUnsigned.cc  BigUnsignedInABase.cc
src/plugin/: PluginManager.cpp
src/plugin/event/: EventHelper.cpp  EventType.cpp
src/plugin/handle/: CXXPluginManagerImpl.cpp  CXXPluginManagerImpl.h  JavaPluginManagerImpl.cpp  JavaPluginManagerImpl.h
src/plugin/java/: JavaPlugin.cpp  JavaPluginManagerImpl.cpp  JavaPluginManagerImpl.h  JavaReflectManager.cpp
src/plugin/java/jni/: DataStorage.cpp  DataStorageImpl.cpp
src/protocoll/Buffers/: DataBuffer.cpp  StreamedDataBuffer.cpp
src/protocoll/packet/: ClientPacketHandler.cpp  ServerPacketHandler.cpp
src/server/: ScoreboardManager.cpp  ServerInfo.cpp  TabManager.cpp
src/utils/: Base64Utils.cpp  UtilImplement.cpp
test/: BufferTest.cpp
utils/: Base64Utils.cpp  Base64Utils.h  EntityRewrite.h  HexUtils.h  SocketUtil.h  StringUtil.h  TimeUtils.h  UUIDUtils.h  UtilImplement.cpp
